--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "tsc",
     "watch": "tsc -w",
     "lint": "eslint -c .eslintrc --ext .ts ./src",
-    "start": "npm run build && electron ./app/dist/main.js"
+    "start": "npm run build && electron ./dist/main.js",
+    "dev": "nodemon --watch app/ --exclude app/render -e ts --exec 'npm run start'"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,7 @@
     "typescript": "^4.1.3"
   },
   "devDependencies": {
-    "electron": "^11.2.2"
+    "electron": "^11.2.2",
+    "nodemon": "^2.0.7"
   }
 }
