--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "get-app-icon": "^1.0.0",
     "robotjs": "^0.6.0",
     "typescript": "^4.1.3"
   },
