--- a/package.json
+++ b/package.json
@@ -4,22 +4,42 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
-    "watch": "tsc -w",
+    "tsc": "tsc",
     "lint": "eslint -c .eslintrc --ext .ts ./src",
-    "start": "npm run build && electron ./dist/main.js",
-    "dev": "nodemon --watch app/ --exclude app/render -e ts --exec 'npm run start'"
+    "start:render": "cd ./render && npm run start",
+    "start:main": "nodemon --watch ./app ./index.ts --exclude ./render -e ts --exec 'npm run tsc && electron ./index.js'",
+    "start": "npm run start:render & npm run start:main & wait",
+    "pack": "electron-builder --dir",
+    "dist": "electron-builder"
   },
   "keywords": [],
-  "author": "",
+  "author": "qwertyyb",
   "license": "ISC",
+  "build": {
+    "appId": "cn.qwertyyb.public-tools",
+    "mac": {
+      "asar": true,
+      "category": "public.app-category.utilities",
+      "identity": null,
+      "electronLanguages": [
+        "en",
+        "zh_CN"
+      ],
+      "extendInfo": {
+        "LSBackgroundOnly": 1,
+        "LSUIElement": 1
+      }
+    }
+  },
   "dependencies": {
-    "get-app-icon": "^1.0.0",
     "robotjs": "^0.6.0",
     "typescript": "^4.1.3"
   },
   "devDependencies": {
+    "@electron-forge/cli": "^6.0.0-beta.54",
     "electron": "^11.2.2",
+    "electron-builder": "^22.9.1",
+    "electron-devtools-installer": "^3.1.1",
     "nodemon": "^2.0.7"
   }
 }
