--- a/package.json
+++ b/package.json
@@ -7,16 +7,31 @@
     "tsc": "tsc",
     "lint": "eslint -c .eslintrc --ext .ts ./src",
     "start:render": "cd ./render && npm run start",
-    "start:main": "nodemon --watch ./app ./index.ts --exclude ./render -e ts --exec 'npm run tsc && electron ./index.js'",
-    "start": "npm run start:render & npm run start:main & wait",
-    "pack": "electron-builder --dir",
-    "dist": "electron-builder"
+    "start:main": "nodemon --exec 'npm run tsc && cross-env NODE_ENV=development electron ./index.js'",
+    "start": "concurrently \"npm run start:render\" \"wait-on http://localhost:8020  && npm run start:main\"",
+    "build:render": "cd ./render && npm run build",
+    "build:main": "electron-builder",
+    "build": "NODE_ENV=production && npm run buld:render && npm run build:main",
+    "pack": "electron-builder --dir"
+  },
+  "nodemonConfig": {
+    "ignore": [
+      "./render"
+    ],
+    "ext": "ts"
   },
   "keywords": [],
   "author": "qwertyyb",
   "license": "ISC",
   "build": {
     "appId": "cn.qwertyyb.public-tools",
+    "files": [
+      "app/",
+      "render/build/",
+      "./index.js",
+      "!**/*.ts",
+      "!render/node_modules"
+    ],
     "mac": {
       "asar": true,
       "category": "public.app-category.utilities",
@@ -31,15 +46,17 @@
       }
     }
   },
-  "dependencies": {
-    "robotjs": "^0.6.0",
-    "typescript": "^4.1.3"
-  },
   "devDependencies": {
     "@electron-forge/cli": "^6.0.0-beta.54",
+    "@types/node": "^12.20.4",
+    "concurrently": "^6.0.0",
+    "cross-env": "^7.0.3",
     "electron": "^11.2.2",
     "electron-builder": "^22.9.1",
     "electron-devtools-installer": "^3.1.1",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "robotjs": "^0.6.0",
+    "typescript": "^4.2.2",
+    "wait-on": "^5.2.1"
   }
 }
