--- a/package.json
+++ b/package.json
@@ -58,5 +58,8 @@
     "robotjs": "^0.6.0",
     "typescript": "^4.2.2",
     "wait-on": "^5.2.1"
+  },
+  "dependencies": {
+    "tiny-pinyin": "^1.3.2"
   }
 }
