--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
   "dependencies": {
     "file-icon": "^4.0.0",
     "mathjs": "^9.2.0",
+    "qrcode": "^1.4.4",
     "tiny-pinyin": "^1.3.2"
   }
 }
