--- a/render/tsconfig.json
+++ b/render/tsconfig.json
@@ -20,7 +20,7 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "typeRoots": [
-      "../shared/types/global.d.ts"
+      "../types/"
     ]
   },
   "include": [
