feat: fix some bug

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -23,6 +23,7 @@ jobs:
     - name: install depencies
       run: |
         npm install
+        cd render && npm i
     - name: build
       env:
         APPLE_ID: ${{ secrets.APPLEID }}
