feat: 输入框使用每日一句, 修复状态栏不能自适应的问题

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "files": [
       "app/",
       "plugins/",
-      "assets",
+      "assets/**/*",
       "render/build/",
       "./index.js",
       "!**/*.ts",
@@ -40,6 +40,9 @@
       "!scripts/*.js",
       "!.**/*"
     ],
+    "directories": {
+      "buildResources": "assets"
+    },
     "afterSign": "scripts/notarize.js",
     "mac": {
       "asar": true,
