--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "public",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "main": "index.js",
   "repository": {
     "type": "git",
@@ -13,7 +13,7 @@
     "start:main": "nodemon --exec 'npm run tsc && cross-env NODE_ENV=development electron ./index.js'",
     "start": "concurrently \"npm run start:render\" \"wait-on http://localhost:8020  && npm run start:main\"",
     "build:render": "cd ./render && npm run build",
-    "build:main": "electron-builder",
+    "build:main": "npm run tsc && electron-builder",
     "build": "NODE_ENV=production && npm run build:render && npm run build:main",
     "release": "electron-build --publish"
   },
@@ -78,6 +78,7 @@
     "wait-on": "^5.2.1"
   },
   "dependencies": {
+    "electron-updater": "^4.3.5",
     "file-icon": "^4.0.0",
     "mathjs": "^9.2.0",
     "qrcode": "^1.4.4",
