feat: 缓存依赖,正式版时不打开开发工具

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build:render": "cd ./render && npm run build",
     "build:main": "npm run tsc && electron-builder",
     "build": "NODE_ENV=production && npm run build:render && npm run build:main",
-    "release": "electron-build --publish"
+    "release": "NODE_ENV=production && npm run build:render && npm run tsc && electron-builder --publish=always"
   },
   "nodemonConfig": {
     "ignore": [
