--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -5,8 +5,9 @@ on:
         description: 'release version'
         required: true
         default: 'v1.0.2'
-  release:
-    types: ['published']
+  push:
+    tags:
+      - 'v*.*.*'
 
 jobs:
   build:
@@ -20,14 +21,28 @@ jobs:
         p12-file-base64: ${{ secrets.CERTIFICATES_P12 }}
         p12-password: ${{ secrets.CERTIFICATES_P12_PASSWORD }}
 
+    - name: Cache node modules
+      uses: actions/cache@v2
+      env:
+        cache-name: cache-node-modules
+      with:
+        # npm cache files are stored in `~/.npm` on Linux/macOS
+        path: ~/.npm
+        key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-build-${{ env.cache-name }}-
+          ${{ runner.os }}-build-
+          ${{ runner.os }}-
+
     - name: install depencies
       run: |
         npm install
         cd render && npm i
-    - name: build
+
+    - name: build and release
       env:
         APPLE_ID: ${{ secrets.APPLEID }}
         APPLE_ID_PASS: ${{ secrets.APPLE_PASSWORD }}
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         CI: true
-      run: npm run build
+      run: npm run release
