--- a/package.json
+++ b/package.json
@@ -68,10 +68,11 @@
     "@types/node": "^12.20.4",
     "concurrently": "^6.0.0",
     "cross-env": "^7.0.3",
-    "electron": "^11.2.2",
+    "electron": "^12.0.0",
     "electron-builder": "^22.9.1",
     "electron-devtools-installer": "^3.1.1",
     "electron-notarize": "^1.0.0",
+    "electron-rebuild": "^2.3.5",
     "nodemon": "^2.0.7",
     "robotjs": "^0.6.0",
     "typescript": "^4.2.2",
