feat(view): 弃用react, 使用svelte实现render逻辑

--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
   "scripts": {
     "tsc": "tsc",
     "lint": "eslint -c .eslintrc --ext .ts ./src",
-    "start:render": "cd ./render && npm run start",
+    "start:render": "cd ./render && npm run dev",
     "start:main": "nodemon --exec 'npm run tsc && cross-env NODE_ENV=development electron ./index.js'",
-    "start": "concurrently \"npm run start:render\" \"wait-on http://localhost:8020  && npm run start:main\"",
+    "start": "concurrently \"npm run start:render\" \"wait-on http://localhost:5000  && npm run start:main\"",
     "build:render": "cd ./render && npm run build",
     "build:main": "npm run tsc && electron-builder -c.mac.identity=null",
     "build": "NODE_ENV=production && npm run build:render && npm run build:main",
     "postinstall": "electron-rebuild -m node_modules/robotjs",
-    "release": "NODE_ENV=production && npm run build:render && npm run tsc && electron-builder --publish=always"
+    "release": "NODE_ENV=production && npm run build:render && npm run tsc && electron-builder --publish=always",
+    "build-dir": "electron-builder --dir"
   },
   "nodemonConfig": {
     "ignore": [
@@ -30,16 +31,16 @@
   "license": "ISC",
   "build": {
     "appId": "cn.qwertyyb.public",
+    "asar": false,
     "files": [
       "app/",
       "plugins/",
       "assets/**/*",
-      "render/build/",
+      "render/public/",
       "./index.js",
       "!**/*.ts",
-      "!render/node_modules",
-      "!scripts/*.js",
-      "!.**/*"
+      "!**/*.map",
+      "!scripts/"
     ],
     "directories": {
       "buildResources": "assets"
@@ -81,6 +82,7 @@
   },
   "dependencies": {
     "@electron/remote": "^1.0.4",
+    "electron": "^12.0.2",
     "electron-updater": "^4.3.5",
     "file-icon": "^4.0.0",
     "mathjs": "^9.2.0",
