--- a/render/tsconfig.json
+++ b/render/tsconfig.json
@@ -1,30 +1,6 @@
 {
-  "compilerOptions": {
-    "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx",
-    "typeRoots": [
-      "../types/"
-    ]
-  },
-  "include": [
-    "src",
-    "../shared"
-  ]
+  "extends": "@tsconfig/svelte/tsconfig.json",
+
+  "include": ["src/**/*", "../shared"],
+  "exclude": ["node_modules/*", "__sapper__/*", "public/*"]
 }
