--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "@types/node": "^12.20.4",
     "concurrently": "^6.0.0",
     "cross-env": "^7.0.3",
-    "electron": "^12.0.2",
+    "electron": "^13.0.1",
     "electron-builder": "^22.9.1",
     "electron-devtools-installer": "^3.1.1",
     "electron-notarize": "^1.0.0",
@@ -82,10 +82,12 @@
   },
   "dependencies": {
     "@electron/remote": "^1.0.4",
+    "@types/sqlite3": "^3.1.7",
     "electron-updater": "^4.3.5",
     "file-icon": "^4.0.0",
     "mathjs": "^9.2.0",
     "qrcode": "^1.4.4",
+    "sqlite3": "^5.0.2",
     "tiny-pinyin": "^1.3.2"
   }
 }
