--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "appId": "cn.qwertyyb.public",
     "asar": false,
     "asarUnpack": [
-      "node_modules/sqlite3"
+      "node_modules/sqlite3",
+      "node_modules/robotjs"
     ],
     "files": [
       "app/",
@@ -68,6 +69,9 @@
       }
     }
   },
+  "resolutions": {
+    "**/node-gyp": "8.1.0"
+  },
   "devDependencies": {
     "@types/mathjs": "^6.0.11",
     "@types/node": "^12.20.4",
@@ -79,18 +83,18 @@
     "electron-notarize": "^1.0.0",
     "electron-rebuild": "^2.3.5",
     "nodemon": "^2.0.7",
-    "robotjs": "^0.6.0",
     "typescript": "^4.2.2",
-    "wait-on": "^5.2.1"
+    "wait-on": "^5.2.1",
+    "@types/sqlite3": "^3.1.7"
   },
   "dependencies": {
     "@electron/remote": "^2.0.1",
-    "@types/sqlite3": "^3.1.7",
     "electron-updater": "^4.3.5",
     "file-icon": "^4.0.0",
     "mathjs": "^9.2.0",
     "qrcode": "^1.4.4",
     "sqlite3": "^5.0.2",
-    "tiny-pinyin": "^1.3.2"
+    "tiny-pinyin": "^1.3.2",
+    "robotjs": "^0.6.0"
   }
 }
