--- a/package.json
+++ b/package.json
@@ -69,32 +69,29 @@
       }
     }
   },
-  "resolutions": {
-    "**/node-gyp": "8.1.0"
-  },
   "devDependencies": {
     "@types/mathjs": "^6.0.11",
     "@types/node": "^12.20.4",
+    "@types/sqlite3": "^3.1.7",
     "concurrently": "^6.0.0",
     "cross-env": "^7.0.3",
-    "electron": "^15.3.0",
+    "electron": "^31.0.0",
     "electron-builder": "^22.13.1",
     "electron-devtools-installer": "^3.1.1",
     "electron-notarize": "^1.0.0",
-    "electron-rebuild": "^2.3.5",
+    "electron-rebuild": "^3.2.9",
     "nodemon": "^2.0.7",
     "typescript": "^4.2.2",
-    "wait-on": "^5.2.1",
-    "@types/sqlite3": "^3.1.7"
+    "wait-on": "^5.2.1"
   },
   "dependencies": {
-    "@electron/remote": "^2.0.1",
+    "@electron/remote": "^2.1.2",
+    "@nut-tree-fork/nut-js": "^4.2.1",
     "electron-updater": "^4.3.5",
     "file-icon": "^4.0.0",
     "mathjs": "^9.2.0",
     "qrcode": "^1.4.4",
     "sqlite3": "^5.0.2",
-    "tiny-pinyin": "^1.3.2",
-    "robotjs": "^0.6.0"
+    "tiny-pinyin": "^1.3.2"
   }
 }
