--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "url": "https://github.com/qwertyyb/public.git"
   },
   "scripts": {
-    "tsc": "tsc",
     "lint": "eslint -c .eslintrc --ext .ts ./src",
+    "tsc": "tsc",
+    "electron": "cross-env NODE_ENV=development electron dist/app/index.js",
+    "watch:assets": "gulp watchAssets",
+    "watch:electron": "nodemon --exec 'npm run tsc && npm run electron || exit 1'",
     "start:render": "cd ./render && npm run dev",
-    "start:main": "nodemon --exec 'npm run tsc && cross-env NODE_ENV=development electron dist/app/index.js || exit 1'",
-    "start": "concurrently \"npm run start:render\" \"wait-on http://localhost:5000  && npm run start:main\"",
+    "start:main": "concurrently --names \"assets,typescript\" -c \"bgBlue.bold,bgRed.bold,bgMagenta.bold\" \"npm run watch:assets\" \"npm run watch:electron\"",
+    "start": "concurrently --names \"assets,frontend,electron\" -c \"bgBlue.bold,bgRed.bold,bgMagenta.bold\" \"npm run watch:assets\" \"npm run start:render\" \"wait-on tcp:localhost:5000 && nodemon --exec 'npm run tsc && npm run electron || exit 1'\"",
     "build:render": "cd ./render && npm run build",
     "build:main": "npm run tsc && electron-builder -c.mac.identity=null",
     "build": "NODE_ENV=production && npm run build:render && npm run build:main",
@@ -68,6 +71,7 @@
     }
   },
   "devDependencies": {
+    "@types/gulp": "^4.0.17",
     "@types/mathjs": "^6.0.11",
     "@types/node": "^12.20.4",
     "@types/sqlite3": "^3.1.7",
@@ -78,16 +82,17 @@
     "electron-devtools-installer": "^3.1.1",
     "electron-notarize": "^1.0.0",
     "electron-rebuild": "^3.2.9",
+    "gulp": "^5.0.0",
     "nodemon": "^2.0.7",
     "typescript": "^4.2.2",
-    "wait-on": "^5.2.1"
+    "wait-on": "^7.2.0"
   },
   "dependencies": {
     "@electron/remote": "^2.1.2",
     "@nut-tree-fork/nut-js": "^4.2.1",
     "electron-updater": "^4.3.5",
     "file-icon": "^4.0.0",
-    "mathjs": "^9.2.0",
+    "mathjs": "^13.0.0",
     "qrcode": "^1.4.4",
     "sqlite3": "^5.0.2",
     "tiny-pinyin": "^1.3.2"
