--- a/render2/package.json
+++ b/render2/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-template-solid",
+  "name": "render2",
   "version": "0.0.0",
   "description": "",
   "scripts": {
@@ -16,6 +16,10 @@
     "vite-plugin-solid": "^2.8.2"
   },
   "dependencies": {
-    "solid-js": "^1.8.11"
+    "@kenh24/solid-virtual-list": "0.0.1-alpha3",
+    "@tanstack/solid-virtual": "^3.5.1",
+    "cui-virtual-list": "^1.0.7",
+    "solid-js": "^1.8.11",
+    "virtua": "^0.31.0"
   }
 }
