--- a/tsconfig.json
+++ b/tsconfig.json
@@ -66,6 +66,6 @@
     "skipLibCheck": true,                     /* Skip type checking of declaration files. */
     "forceConsistentCasingInFileNames": true  /* Disallow inconsistently-cased references to the same file. */
   },
-  "include": ["app/**/*.ts", "plugins/**/*.ts"],
+  "include": ["app/**/*.ts", "plugins/**/*.ts", "utils/**/*.ts"],
   "exclude": ["render/"]
 }
