--- a/plugins/find/package.json
+++ b/plugins/find/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@public/mdfind": "workspace:*"
+    "@public/mdfind": "workspace:*",
+    "nan": "^2.20.0"
   }
 }
