--- a/plugins/find/package.json
+++ b/plugins/find/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@public/mdfind": "workspace:*",
+    "isbinaryfile": "^5.0.2",
     "nan": "^2.20.0"
   }
 }
