--- a/plugins/find/package.json
+++ b/plugins/find/package.json
@@ -2,7 +2,7 @@
   "name": "find",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,7 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "@public/mdfind": "workspace:*",
-    "isbinaryfile": "^5.0.2",
-    "nan": "^2.20.0"
+    "isbinaryfile": "^5.0.2"
+  },
+  "publicPlugin": {
+    "icon": "https://img.icons8.com/?size=100&id=119218&format=png&color=000000",
+    "title": "文件搜索",
+    "subtitle": "搜索本机文件"
   }
 }
