--- a/package.json
+++ b/package.json
@@ -69,9 +69,16 @@
   "pnpm": {
     "overrides": {
       "node-gyp": "^10.0.0"
+    },
+    "patchedDependencies": {
+      "sqlite3@5.1.7": "patches/sqlite3@5.1.7.patch",
+      "@nut-tree-fork/node-mac-permissions@2.2.1": "patches/@nut-tree-fork__node-mac-permissions@2.2.1.patch"
     }
   },
   "devDependencies": {
+    "@electron/remote": "^2.1.2",
+    "@nut-tree-fork/nut-js": "^4.2.1",
+    "@public/osx-fileicon": "workspace:*",
     "@types/mathjs": "^6.0.11",
     "@types/node": "^12.20.55",
     "@types/sqlite3": "^3.1.7",
@@ -84,26 +91,21 @@
     "electron-devtools-installer": "^3.1.1",
     "electron-notarize": "^1.0.0",
     "electron-rebuild": "^3.2.9",
+    "electron-updater": "^4.3.5",
+    "file-icon": "^4.0.0",
+    "isbinaryfile": "^5.0.2",
+    "mathjs": "^13.0.0",
     "node-gyp": "^10.0.0",
     "node-loader": "^2.0.0",
     "nodemon": "^2.0.7",
+    "qrcode": "^1.4.4",
+    "sqlite3": "^5.0.2",
+    "tiny-pinyin": "^1.3.2",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "typescript": "^4.9.5",
     "wait-on": "^7.2.0",
     "webpack": "^5.92.1",
-    "webpack-cli": "^5.1.4",
-    "@electron/remote": "^2.1.2",
-    "@nut-tree-fork/nut-js": "^4.2.1",
-    "@public/osx-fileicon": "workspace:*",
-    "electron-updater": "^4.3.5",
-    "file-icon": "^4.0.0",
-    "isbinaryfile": "^5.0.2",
-    "mathjs": "^13.0.0",
-    "qrcode": "^1.4.4",
-    "sqlite3": "^5.0.2",
-    "tiny-pinyin": "^1.3.2"
-  },
-  "dependencies": {
+    "webpack-cli": "^5.1.4"
   }
 }
