--- a/plugins/calculator/package.json
+++ b/plugins/calculator/package.json
@@ -12,6 +12,7 @@
   "publicPlugin": {
     "title": "计算器",
     "subtitle": "快捷计算表达式",
-    "icon": "https://img.icons8.com/plasticine/100/000000/apple-calculator.png"
+    "icon": "https://img.icons8.com/plasticine/100/000000/apple-calculator.png",
+    "entry": "./dist/index.js"
   }
 }
