--- a/plugins/clipboard/package.json
+++ b/plugins/clipboard/package.json
@@ -12,6 +12,17 @@
   "publicPlugin": {
     "title": "剪切板",
     "subtitle": "剪切板历史",
-    "icon": "https://img.icons8.com/cute-clipart/64/000000/clipboard.png"
+    "icon": "https://img.icons8.com/cute-clipart/64/000000/clipboard.png",
+    "entry": "./dist/index.js",
+    "commands": [
+      {
+        "name": "clipboard",
+        "matches": [
+          { "type": "text", "keywords": ["剪切板", "clipboard", "cp"] }
+        ],
+        "mode": "listView",
+        "entry": "./dist/preload.js"
+      }
+    ]
   }
 }
