--- a/plugins/launcher/package.json
+++ b/plugins/launcher/package.json
@@ -12,6 +12,7 @@
   "publicPlugin": {
     "title": "应用启动器",
     "subtitle": "快速启动应用",
-    "icon": "https://img.icons8.com/fluent/48/000000/apps-tab.png"
+    "icon": "https://img.icons8.com/fluent/48/000000/apps-tab.png",
+    "entry": "./dist/index.js"
   }
 }
