--- a/utils/osx-fileicon/package.json
+++ b/utils/osx-fileicon/package.json
@@ -2,7 +2,10 @@
   "name": "@public/osx-fileicon",
   "version": "0.0.2",
   "description": "Get the Finder icon for a file path",
-  "main": "index.js",
+  "main": "index.ts",
+  "scripts": {
+    "postinstall": "node-gyp rebuild"
+  },
   "keywords": [
     "Finder",
     "Preview",
@@ -21,5 +24,8 @@
   "repository": "https://github.com/bengsquared/osx-fileicon",
   "dependencies": {
     "nan": "^2.14.0"
+  },
+  "devDependencies": {
+    "node-gyp": "^10.0.0"
   }
 }
