--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "@types/webpack-env": "^1.18.5",
     "concurrently": "^6.0.0",
     "cross-env": "^7.0.3",
+    "css-loader": "^7.1.2",
     "electron": "^31.0.0",
     "electron-builder": "^24.13.3",
     "electron-devtools-installer": "^3.1.1",
@@ -114,6 +115,7 @@
     "node-loader": "^2.0.0",
     "nodemon": "^2.0.7",
     "qrcode": "^1.4.4",
+    "style-loader": "^4.0.0",
     "tiny-pinyin": "^1.3.2",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
