--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "webpack:preload": "webpack --config ./webpack/webpack.config.preload.ts -w",
     "webpack:plugin": "webpack --config ./webpack/webpack.config.plugin.ts -w",
     "webpack:plugin:preload": "webpack --config ./webpack/webpack.config.plugin.preload.ts -w",
-    "start": "concurrently --names \"main,preload,plugin,render,electron\" -c \"bgBlue.bold,bgRed.bold,bgMagenta.bold,bgYellow.bold,bgGreen.bold\" \"npm run webpack:main\" \"npm run webpack:preload\" \"npm run webpack:plugin\" \"npm run start:render\" \"wait-on tcp:localhost:3000 && npm run start:electron\"",
+    "start": "concurrently --names \"main,preload,plugin,render,electron\" -c \"bgBlue.bold,bgBlack.bold,bgMagenta.bold,bgYellow.bold,bgGreen.bold\" \"npm run webpack:main\" \"npm run webpack:preload\" \"npm run webpack:plugin\" \"npm run start:render\" \"wait-on tcp:localhost:3000 && npm run start:electron\"",
     "build:main": "webpack --config ./webpack/webpack.config.main.ts --mode=production",
     "build:preload": "webpack --config ./webpack/webpack.config.preload.ts --mode=production",
     "build:plugin": "webpack --config ./webpack/webpack.config.plugin.ts --mode=production",
     "build:plugin:preload": "webpack --config ./webpack/webpack.config.plugin.preload.ts --mode=production",
     "build:render": "cd ./render2 && npm run build",
-    "build": "concurrently --names \"main,preload,plugin,render,plguin-preload\" -c \"bgBlue.bold,bgRed.bold,bgMagenta.bold,bgYellow.bold,bgGreen.bold\" \"npm run build:main\" \"npm run build:preload\" \"npm run build:plugin\" \"npm run build:render\" \"npm run build:plugin:preload\"",
+    "build": "concurrently --names \"main,preload,plugin,render\" -c \"bgBlue.bold,bgGreen.bold,bgMagenta.bold,bgYellow.bold\" \"npm run build:main\" \"npm run build:preload\" \"npm run build:plugin\" \"npm run build:render\"",
     "pack": "electron-builder -c.mac.identity=null --dir",
     "release": "NODE_ENV=production && npm run build:render && npm run tsc && electron-builder --publish=always"
   },
