feat: 支持双击 command 唤起

--- a/package.json
+++ b/package.json
@@ -126,6 +126,7 @@
   },
   "dependencies": {
     "@public/osx-fileicon": "workspace:*",
-    "sqlite3": "^5.0.2"
+    "sqlite3": "^5.0.2",
+    "uiohook-napi": "^1.5.4"
   }
 }
